--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=supreme@400,700&f[]=recia@700,500,400&display=swap"
+      rel="stylesheet"
+    />
     <title>React eCommerce App</title>
   </head>
   <body>
