--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       href="https://api.fontshare.com/v2/css?f[]=supreme@400,700&f[]=recia@700,500,400&display=swap"
       rel="stylesheet"
     />
-    <title>Atlas Electronics</title>
+    <title>Atlas Ecommerce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
